--- a/sandbox/Dockerfile
+++ b/sandbox/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:17.10
+FROM ubuntu:18.04
 MAINTAINER hapy.lestat@gmail.com
 
 SHELL ["/bin/bash","-c"]
@@ -10,21 +10,17 @@ COPY helpers/get_java.sh ${SANDBOX}/helpers/get_java.sh
 COPY helpers/get_java_parser.py ${SANDBOX}/helpers/get_java_parser.py
 
 # rpm required to build rpm packages
+# npm & libfontconfig required for admin view
+# gcc and python-dev needed for ambari-metrics to build psutils and eat around 190 Mb :(
 RUN apt-get update &&\
     apt-get install curl git unzip rpm -y &&\
-    apt-get clean
-
-# gcc and python-dev needed for ambari-metrics to build psutils and eat around 190 Mb :(
-
-# npm & libfontconfig required for admin view
-RUN apt-get update &&\
     apt-get install --no-install-recommends python2.7-minimal python-pip python3-minimal python3-pip -y &&\
     apt-get install gcc python-dev npm libfontconfig -y &&\
     apt-get clean
 
 # Java, Maven versions
-ARG JAVA_VER=8u181
-ARG MVN_VERSION=3.5.4
+ARG JAVA_VER=11
+ARG MVN_VERSION=3.6.0
 
 ARG JAVA_ROOT_DIR=/usr/jdk
 
